objects/Limit_Change__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Request__c</fullName>
        <label>Date of Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Limit__c</fullName>
        <label>Requested Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treasury_Service__c</fullName>
        <label>Treasury Service</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Limit Changes</relationshipLabel>
        <relationshipName>Limit_Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Limit Change</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_of_Request__c</columns>
        <columns>Requested_Limit__c</columns>
        <columns>Status__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Limit Change</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Limit Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>